add some chnages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
 <main>
   <section class="site-hero-sectoin">
-    <div class="container">
+    <div class="container-hero">
       <div class="site-hero">
         <h2 class="site-hero__hero-heading hero-heading">Find the best <span class="hero-heading__hero-span hero-span">talent</span></h2>
         <p class="site-hero__hero-text hero-text">Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into the abundance of global talent. We’re about to change that.</p>
@@ -70,7 +70,7 @@
 
               <!-- DELIVER-SECTION -->
               <section class="deliver-section">
-                <div class="container">
+                <div class="container-deliver">
                   <div class="deliver">
                     <h3 class="deliver__stories stories">Delivering real results for top companies. Some of our 
                       <span class="stories__success success">success stories.</span></h3>
