--- a/index2.html
+++ b/index2.html
@@ -40,7 +40,7 @@
     <!-- ABOUT HOVER SECTION -->
 
     <section class="hover-section">
-      <div class="cotainer">
+      <div class="cotainer-about">
         <div class="about-hover-section">
           <h2 class="about-hover-section__big-heading big-heading">Meet the directors</h2>
           <ul class="about-hover-section__about-list about-list">
@@ -136,11 +136,11 @@
         <div class="clients">
           <h2 class="clients__clients-heading clients-heading">Some of our clients</h2>
           <ul class="clients__clients-list clients-list">
-            <li class="clients-list__picture-item picture-item"> <img class="picture-item__clients-img1 clients-img1" src="./img/clever1.png" alt="the verge" width="165" height="28"></li>
-            <li class="clients-list__picture-item picture-item"> <img class="picture-item__clients-img2 clients-img2" src="./img/clever2.png" alt="jakarta" width="184" height="23"></li>
-            <li class="clients-list__picture-item picture-item"> <img class="picture-item__clients-img3 clients-img3" src="./img/clever3.png" alt="guardian" width="180" height="28"></li>
-            <li class="clients-list__picture-item picture-item"> <img class="picture-item__clients-img4 clients-img4" src="./img/clever4.png" alt="techradar"  width="165" height="28"></li>
-            <li class="clients-list__picture-item picture-item"> <img class="picture-item__clients-img5 clients-img5" src="./img/clever5.png" alt="gadgets" width="98" height="45"></li>
+            <li class="clients-list__picture-item picture-item"> <img class="picture-item__clients-img1 clients-img1" src="./img/edit1.png" alt="the verge" width="165" height="28"></li>
+            <li class="clients-list__picture-item picture-item"> <img class="picture-item__clients-img2 clients-img2" src="./img/edit2.png" alt="jakarta" width="184" height="23"></li>
+            <li class="clients-list__picture-item picture-item"> <img class="picture-item__clients-img3 clients-img3" src="./img/edit3.png" alt="guardian" width="180" height="28"></li>
+            <li class="clients-list__picture-item picture-item"> <img class="picture-item__clients-img4 clients-img4" src="./img/edit4.png" alt="techradar"  width="165" height="28"></li>
+            <li class="clients-list__picture-item picture-item"> <img class="picture-item__clients-img5 clients-img5" src="./img/edit5.png" alt="gadgets" width="98" height="45"></li>
           </ul>
         </div>
       </div>
