--- a/index3.html
+++ b/index3.html
@@ -27,6 +27,33 @@
       </div>
     </div>
   </header>
+  <main>
+    <section class="form-section">
+      <div class="form-section__container container">
+        <div class="container__form-box form-box">
+          <div class="form-box__contact contact">
+            <h2 class="contact__href href">Contact</h2>
+            <span class="contact__ask ask">Ask us about</span>
+            <ul class="contact__contact-list contact-list">
+              <li class="contact__contact-item1 contact-item1">The quality of our talent network</li>
+              <li class="contact__contact-item2 contact-item2">Usage & implementation of our software</li>
+              <li class="contact__contact-item3 contact-item3">How we help drive innovation</li>
+            </ul>
+          </div>
+          <div class="form-box__form-sec form-sec">
+            <form class="form-sec__frm-cls frm-cls" action="https://echo.htmlacademy.ru/">
+              <input class="frm-cls__frm-init frm-init" type="text" placeholder="Name" required>
+              <input class="frm-cls__frm-init frm-init" type="text" placeholder="Email Address" required>
+              <input class="frm-cls__frm-init frm-init" type="text" placeholder="Company Name" required>
+              <input class="frm-cls__frm-init frm-init" type="text" placeholder="Title" required>
+              <input class="frm-cls__frm-init frm-init2" type="text" placeholder="Message" required>
+              <button class="form-sec__form-btn form-btn" type="submit">submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
   <footer>
     <div class="container">
       <div class="footer-section">
